# deokbae

./: Dockerfile  README.md  app.py  docker-compose.yml  dummy.py  models.py  pyproject.toml  routes.py  utils.py
migrations/versions/: caa04e5cd6aa_initial_migration.py
templates/: index.html
