[tool.poetry]
name = "deokbae"
version = "0.1.0"
description = ""
authors = ["mr-cliche-git <mr.cliche7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
sqlalchemy = "^2.0.36"
faker = "^30.8.2"
mypy = "^1.13.0"
pymysql = "^1.1.1"
flask-migrate = "^4.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
